SAK-12998 Potential NPE and minor cleanup (static code review)
git-svn-id: https://source.sakaiproject.org/svn/authz/trunk@41248 66ffb92e-73f9-0310-93c1-f5514f145a0a